--- a/Stonex/Index.html
+++ b/Stonex/Index.html
@@ -22,6 +22,7 @@
                 </div>
                 <div class="menu">
                     <ul>
+                        <li>Hiiii</li>
                         <li><a id="hover-underline-animation" href="">Home</a></li>
                         <li><a class="hover-underline-animation" href="">Text</a></li>
                         <li><a class="hover-underline-animation" href="">Grid</a></li>
