--- a/felisiano/index.html
+++ b/felisiano/index.html
@@ -540,6 +540,7 @@
                 </div>
                 <div class="copyright">
                     <p>Copyright ©2023 All rights reserved | This template is made with by Colorlib</p>
+                    <p>Developed by: Jay Patel</p>
                 </div>
             </div>
         </footer>
