--- a/Pizzle/index.html
+++ b/Pizzle/index.html
@@ -551,6 +551,7 @@
     </footer>
     <div class="footer-2">
         <p>© Copyright 2021 Pizzle. All Rights Reserved.</p>
+        <p>Developed by: Jay Patel</p>
     </div>
 
     <!-- ======================================================= footer end =========================================== -->
