--- a/electronicsmart/index.html
+++ b/electronicsmart/index.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="menu">
                     <ul>
-                        <li>Home</li>
+                        <a href="index.html"><li>Home</li></a>
                         <li class="electronic">Electronics &nbsp;<i class="fa-solid fa-caret-down"></i>
                             <div class="sub-menu">
                                 <h5>Mobiles,Computers</h5>
