--- a/Portfolio1/index.html
+++ b/Portfolio1/index.html
@@ -72,6 +72,16 @@
                                             Services
                                         </a>
                                     </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="dropdown-item fs-5" href="./Pages/About.html">
+                                            About 
+                                        </a>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="dropdown-item fs-5" href="./Pages/Pricing.html">
+                                            Pricing
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
