--- a/Chess/index.html
+++ b/Chess/index.html
@@ -7,39 +7,32 @@
     <title>Chess</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/abc8e57fdb.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/index.css">  
 </head>
 
 <body class="bg-[#fece9e] h-auto">
     <div class="text-center text-[3.5rem] font-bold">
         <h2>Chess</h2>
-        <div class="justify-center flex font-bold text-[20px]">
-            <h3 class="px-2">Player 1 : <span id="player1" class="text-[25px]"></span></h3><span class="py-1 h-30">|</span>
-            <h3 class="px-2">Player 2 : <span id="player2" class="text-[25px]"></span></h3>
-        </div>
     </div>
-
-    <div class="absolute top-0 left-0 right-0 justify-center flex z-50 mt-40 p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full" id="selectPlayerModel">
-        <div class="relative w-full max-w-sm max-h-sm">
-            <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                <div class="p-6 text-center">
-                    <svg aria-hidden="true" class="mx-auto mb-4 text-gray-400 w-14 h-14 dark:text-gray-200" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                    <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Select your icon !!</h3>
-                    <button data-modal-hide="popup-modal" type="button" class="text-black bg-white focus:ring-4 focus:outline-none font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2" onclick="getPlayer(this)">
-                        White
-                    </button>
-                    <button data-modal-hide="popup-modal" type="button" class="text-white bg-black focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-black text-sm font-medium px-5 py-2.5 focus:z-10" onclick="getPlayer(this)">Black</button>
+    <div class="fixed inset-0 z-10 overflow-y-auto" id="toast-warning">
+          <div class="flex my-32 md:my-52 items-end justify-center p-4 text-center sm:items-center sm:p-0">
+            <div class="relative transform overflow-hidden rounded-lg  text-left shadow-xl transition-all sm:my-0 sm:w-full sm:max-w-lg">
+              <div class="sm:p-6 sm:pb-4">
+                <div class="">
+                    <div class="bg-orange-100 text-start border-l-4 border-orange-500 text-orange-800 p-8">
+                        <p class="font-bold text-[1.5rem]">Warning !!</p>
+                        <p id="warningText" class="text-lg"></p>
+                    </div>
                 </div>
+              </div>
             </div>
-        </div>
-    </div>
-
-    <div class="flex justify-center">
-        <table class="text-center italic shadow-2xl my-5 mx-5 sm:mx-0 sm:my-10">
+          </div>
+    </div>    
+    <div class="flex justify-center">   
+        <table class="text-center italic shadow-2xl my-0 mx-5 sm:mx-0 sm:my-10">
             <tbody id="table" class="h-auto w-auto"></tbody>
         </table>
     </div>
-    
     <footer class="bg-white dark:bg-gray-900">
         <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
             <div class="sm:flex sm:items-center sm:justify-between text-center">
@@ -75,5 +68,5 @@
         </div>
     </footer>
 </body>
-<script src="./JS/index.js"></script>
+<script src="./JS/demo.js"></script>
 </html>
