--- a/Chess/index.html
+++ b/Chess/index.html
@@ -14,6 +14,13 @@
     <div class="text-center text-[3.5rem] font-bold">
         <h2>Chess</h2>
     </div>
+
+    <div class="justify-center flex font-bold text-[20px]">
+        <h3 class="px-2">Player 1 : <span id="player1" class="text-[25px]"></span></h3><span class="py-1">|</span>
+        <h3 class="px-2">Player 2 : <span id="player2" class="text-[25px]"></span></h3>
+    </div>
+    <!-- ============== Warning modal =============== -->
+
     <div class="fixed inset-0 z-10 overflow-y-auto" id="toast-warning">
           <div class="flex my-32 md:my-52 items-end justify-center p-4 text-center sm:items-center sm:p-0">
             <div class="relative transform overflow-hidden rounded-lg  text-left shadow-xl transition-all sm:my-0 sm:w-full sm:max-w-lg">
@@ -27,14 +34,37 @@
               </div>
             </div>
           </div>
-    </div>    
+    </div> 
+    <!-- ============== Player selection modal =============== -->
+
+    <div class="fixed inset-0 z-10 overflow-y-auto" id="selectPlayer">
+        <div class="flex my-32 md:my-52 items-end justify-center p-4 text-center sm:items-center sm:p-0">
+          <div class="relative transform overflow-hidden rounded-lg bg-orange-400  text-left shadow-xl transition-all sm:my-0 sm:w-full sm:max-w-lg">
+            <div class="p-8 lg:p-6 lg:pb-4">
+                <div class="text-center">
+                    <div class="text-[2rem]">
+                        <h3>Select the player</h3>
+                    </div>
+                    <div class="mt-3">
+                        <button onclick="selectPlayer(this)" value="White" class="border border-white border-4 rounded-lg text-[20px] font-bold p-3 w-20 bg-white text-black">White</button>
+                        <button onclick="selectPlayer(this)" value="Black" class="border border-gray-900 border-4 rounded-lg text-[20px] font-bold p-3 ml-3 w-20 bg-black text-white">Black</button>
+                    </div>
+                </div>   
+            </div>
+          </div>
+        </div>
+    </div>
+    <!-- ============== Chess board =============== -->
+
     <div class="flex justify-center">   
-        <table class="text-center italic shadow-2xl my-0 mx-5 sm:mx-0 sm:my-10">
+        <table class="text-center italic shadow-2xl mb-32 mx-5">
             <tbody id="table" class="h-auto w-auto"></tbody>
         </table>
     </div>
-    <footer class="bg-white dark:bg-gray-900">
-        <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+    <!-- ============== Footer =============== -->
+
+    <footer class=" w-full relative ">
+        <div class="bg-white dark:bg-gray-900  w-screen p-4 py-6 lg:py-8 lg:px-20 absolute bottom-0 right-0">
             <div class="sm:flex sm:items-center sm:justify-between text-center">
                 <span class="text-[1.5rem] text-gray-500 sm:text-center dark:text-gray-400">Developed By : Jay Patel
                 </span>
